[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/bat.png" type="Texture" id=1]
[ext_resource path="res://core/bat/Bat.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=7]
radius = 20.0

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=8]
radius = 16.0

[node name="Bat" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="Damager" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Damager"]
position = Vector2( 0, -3.15579 )
shape = SubResource( 7 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -20, -20, 40, 40 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 1.3, 1.3, 1.3, 1 )
position = Vector2( 0, -15.7789 )
scale = Vector2( 5, 5 )
frames = SubResource( 6 )
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 8 )

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="Damager" to="." method="damage_player"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="remove"]
[connection signal="timeout" from="AttackTimer" to="." method="start_attack"]
